Add topic modeling, worldcat_results, adjust perlentaucher author_ids

--- a/extract_world_cat_results.ipynb
+++ b/extract_world_cat_results.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup as soup"
+    "import time\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +85,571 @@
     "        for result in row.find(\"td\"):\n",
     "            results.append(result.next.next.next.next.next)\n",
     "print(results[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = pd.read_csv(\"authors_final.csv\", index_col='author_id')\n",
+    "authors = authors.drop(columns=\"Unnamed: 0\").copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>middle_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>birth_place</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>has_wikipedia</th>\n",
+       "      <th>website</th>\n",
+       "      <th>literaturinstitut</th>\n",
+       "      <th>has_phd</th>\n",
+       "      <th>full_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Reto</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hänny</td>\n",
+       "      <td>1947-04-13</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reto Hänny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Perfahl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jost Perfahl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Elisabeth</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Plessen</td>\n",
+       "      <td>1944-03-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Elisabeth Plessen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vintila</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ivanceanu</td>\n",
+       "      <td>1940-12-26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Vintila Ivanceanu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Horst</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Bienek</td>\n",
+       "      <td>1930-05-07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Horst Bienek</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          first_name middle_name  last_name  birth_date birth_place  gender  \\\n",
+       "author_id                                                                     \n",
+       "0               Reto         NaN      Hänny  1947-04-13         NaN    male   \n",
+       "1               Jost         NaN    Perfahl         NaN         NaN    male   \n",
+       "2          Elisabeth         NaN    Plessen  1944-03-15         NaN  female   \n",
+       "3            Vintila         NaN  Ivanceanu  1940-12-26         NaN    male   \n",
+       "4              Horst         NaN     Bienek  1930-05-07         NaN    male   \n",
+       "\n",
+       "           has_wikipedia website literaturinstitut has_phd          full_name  \n",
+       "author_id                                                                      \n",
+       "0                   True     NaN               NaN     NaN         Reto Hänny  \n",
+       "1                  False     NaN               NaN     NaN       Jost Perfahl  \n",
+       "2                   True     NaN               NaN     NaN  Elisabeth Plessen  \n",
+       "3                   True     NaN               NaN     NaN  Vintila Ivanceanu  \n",
+       "4                   True     NaN               NaN     NaN       Horst Bienek  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors[\"full_name\"] = authors[\"first_name\"].str.cat(authors[[\"middle_name\", \"last_name\"]].fillna(\"\").astype(str), sep=\" \").str.replace(\"  \", \" \")\n",
+    "authors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reto Hänny 29\n",
+      "Jost Perfahl 1\n",
+      "Elisabeth Plessen 22\n",
+      "Vintila Ivanceanu 1\n",
+      "Horst Bienek 171\n",
+      "Renate Schostack 1\n",
+      "Klaus Stiller 11\n",
+      "Maria Elisabeth Straub 5\n",
+      "Hans-Jürgen Fröhlich 7\n",
+      "Herbert Eisenreich 25\n",
+      "Marie-Thérèse Kerschbaumer 25\n",
+      "Uwe Bolius 1\n",
+      "Karin Struck 54\n",
+      "Gert Jonke 64\n",
+      "Jürg Laederach 22\n",
+      "Dieter Kühn 111\n",
+      "16 Peter Schalmey 0\n",
+      "Godehard Schramm 17\n",
+      "Heinz Pototschnig 1\n",
+      "Gerhard Meier 155\n",
+      "Walter Kappacher 25\n",
+      "Hermann Friedl 9\n",
+      "Rolf Schneider 110\n",
+      "23 O. P. Zier 0\n",
+      "Hannelies Taschau 3\n",
+      "Helga Schütz 22\n",
+      "Jutta Schutting 6\n",
+      "Eva Schindler 15\n",
+      "Peter Renz 20\n",
+      "Ulrich Plenzdorf 178\n",
+      "Erica Pedretti 148\n",
+      "Hanns-Josef Ortheil 86\n",
+      "Engelbert Obernosterer 3\n",
+      "E. Y. Meyer 109\n",
+      "Angelika Mechtel 17\n",
+      "Gertrud Leutenegger 37\n",
+      "Ursula Krechel 31\n",
+      "Hermann Kinder 53\n",
+      "Christine Haidegger 3\n",
+      "Heidulf Gerngross 8\n",
+      "Christoph Geiser 41\n",
+      "Herbert Fleck 19\n",
+      "Ludwig Fels 22\n",
+      "Helmut Eisendle 21\n",
+      "Jeannie Ebner 24\n",
+      "Catarina Carsten 4\n",
+      "Hermann Burger 172\n",
+      "Katja Behrens 11\n",
+      "Walter Müller 594\n",
+      "Gerald Zschorsch 3\n",
+      "Josef Winkler 142\n",
+      "Erich Wolfgang Skwara 5\n",
+      "Doris Richter 24\n",
+      "Ernst Nowak 11\n",
+      "Dorothea Macheiner 7\n",
+      "Martin Luksan 1\n",
+      "Klaus Konjetzky 1\n",
+      "Paul Kersten 22\n",
+      "Diana Kempff 10\n",
+      "Hanna Johansen 63\n",
+      "Katrine von Hutten 1\n",
+      "Karl Günther Hufnagel 1\n",
+      "62 Heribert Hopf 0\n",
+      "Gert Hofmann 70\n",
+      "Lukas Hartmann 35\n",
+      "Marianne Gruber 20\n",
+      "Markus Fenner 1\n",
+      "67 Maria Felsenreich 0\n",
+      "Gunter Falk 8\n",
+      "Ernst-Jürgen Dreyer 20\n",
+      "Helmut Degner 1\n",
+      "Jan Christ 117\n",
+      "Franz Böni 9\n",
+      "Jurek Becker 234\n",
+      "Peter Roos 82\n",
+      "Martin Roda Becher 2\n",
+      "Renate Rasp 9\n",
+      "Ingrid Puganigg 8\n",
+      "Edwin Ortmann 1\n",
+      "Sten Nadolny 75\n",
+      "Klaus Merz 78\n",
+      "Jürgen Lodemann 19\n",
+      "Brigitte Kronauer 100\n",
+      "Bodo Kirchhoff 64\n",
+      "Anna Jonas 136\n",
+      "85 Margarete Jehn 0\n",
+      "Martin Grzimek 30\n",
+      "Henning Grunwald 1\n",
+      "Anton Fuchs 74\n",
+      "89 Waltraud Friz 0\n",
+      "Roderich Feldes 4\n",
+      "91 Hans Drawe 0\n",
+      "Margrit von Dach 2\n",
+      "Hans Christoph Buch 60\n",
+      "Margrit Baur 12\n",
+      "95 Elisabeth Albertsen 0\n",
+      "Ursula Adam 112\n",
+      "Maja Beutler 24\n",
+      "Christoph Kubelka 2\n",
+      "Elisabeth Meylan 4\n",
+      "Thomas Hürlimann 106\n",
+      "Frank-Wolf Matthies 11\n",
+      "Anton Dekan 9\n",
+      "Adelheid Duvanel 16\n",
+      "Klaus Hoffer 14\n",
+      "Joseph Zoderer 45\n",
+      "106 Gisela Zies 0\n",
+      "Pierre Imhasly 20\n",
+      "Andreas Nohl 5\n",
+      "Eva Demski 41\n",
+      "Christoph Burgauner 2\n",
+      "Margrit Schriber 25\n",
+      "Dominik Brun 10\n",
+      "Urs Jaeggi 29\n",
+      "Günter Hein 48\n",
+      "115 Franz Mechsner 0\n",
+      "Elfriede Czurda 10\n",
+      "Ilma Rakusa 83\n",
+      "Ulrich Schacht 11\n",
+      "Rolf Niederhauser 1\n",
+      "Michael Rößner 8\n",
+      "121 Zbigniew Krempf 0\n",
+      "122 Pascal Morché 0\n",
+      "Guntram Vesper 17\n",
+      "Emil Zopfi 9\n",
+      "Matthias Zschokke 32\n",
+      "Michael Zeller 138\n",
+      "127 Irina Zaharescu 0\n",
+      "Uwe Wolff 24\n",
+      "Johanna Walser 19\n",
+      "Walter Vogl 6\n",
+      "Lothar Schöne 11\n",
+      "Erasmus Schöfer 4\n",
+      "Einar Schleef 130\n",
+      "Gerald Szyszkowitz 14\n",
+      "135 Udo Rabsch 0\n",
+      "Jochen Link 1\n",
+      "Friedrich Wilhelm Korff 5\n",
+      "Walter Klier 6\n",
+      "139 Roswitha Hamadani 0\n",
+      "140 Brigitte Gutenbrunner 0\n",
+      "Alfred Gulden 15\n",
+      "Robert Gratzer 1\n",
+      "Wolfgang Georg Fischer 71\n",
+      "Ulla Berkéwicz 98\n",
+      "Birgitta Arens 1\n",
+      "Jürg Amann 26\n",
+      "Eva Maria Alves 4\n",
+      "Andrea Wolfmayr 4\n",
+      "Michael Schneider 346\n",
+      "Friederike Roth 33\n",
+      "Uwe Herms 3\n",
+      "Karin Reschke 10\n",
+      "Bettina Blumenberg 1\n",
+      "Gudrun Brug 1\n",
+      "Jochen Missfeldt 8\n",
+      "Bodo Morshäuser 12\n",
+      "Alban Nikolai Herbst 24\n",
+      "Zsuzsanna Gahse 25\n",
+      "Rainald Goetz 100\n",
+      "Wolfgang Held 66\n",
+      "Gerhard Köpf 38\n",
+      "Roland Lang 39\n",
+      "163 Romie Lie 0\n",
+      "164 Lisa Witasek 0\n",
+      "Birgit Pausch 1\n",
+      "Hansjörg Schertenleib 27\n",
+      "Martin Mosebach 71\n",
+      "Wolfgang Linder 6\n",
+      "Libuše Moníková 90\n",
+      "Martin R. Dean 130\n",
+      "Frank Werner 309\n",
+      "Erich Loest 101\n",
+      "173 Gabrielle Weigand 0\n",
+      "Peter Weibel 225\n",
+      "Keto von Waberer 11\n",
+      "Ralf Thenior 5\n",
+      "Thomas Strittmatter 21\n",
+      "178 Harald Strätz 0\n",
+      "Beat Sterchi 18\n",
+      "Kristin T. Schnider 5\n",
+      "Eva Schmidt 126\n",
+      "Evelyn Schlag 26\n",
+      "Ernst Alexander Rauter 2\n",
+      "Helen Meier 90\n",
+      "Norbert Loacker 2\n",
+      "Hans-Jürgen Kühn 52\n",
+      "Jörg Krichbaum 41\n",
+      "Marcel Konrad 58\n",
+      "Michael Köhlmeier 57\n",
+      "Wolfgang Hegewald 12\n",
+      "Josef Haslinger 46\n",
+      "Jörg Fauser 50\n",
+      "193 Wolf-Dieter Eigner 0\n",
+      "Gerd-Peter Eigner 4\n",
+      "Jochen Beyse 2\n",
+      "Ginka Steinwachs 28\n",
+      "Angelika Stark 3\n",
+      "Heinz Stalder 12\n",
+      "Joachim Scholz 33\n",
+      "Hartmut Riederer 7\n",
+      "201 Elena Richterich 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_works_first = []\n",
+    "for i, author_name in enumerate(authors.full_name.values[0:202]):\n",
+    "    time.sleep(np.random.randint(5,7))\n",
+    "    url_worldcat = f\"https://www.worldcat.org/search?q=su%3A{author_name}&qt=advanced&dblist=638\"\n",
+    "    response = requests.get(url_worldcat, headers=headers)\n",
+    "    page = soup(response.text, \"html.parser\")\n",
+    "    results = []\n",
+    "    for j in page.find_all(\"div\"):\n",
+    "        for row in j.find_all(attrs={\"class\": \"resultsinfo\"}):\n",
+    "            for result in row.find(\"td\"):\n",
+    "                results.append(result.next.next.next.next.next)\n",
+    "    if results != []:\n",
+    "        print(author_name, results[0])\n",
+    "        total_works_first.append(results[0])\n",
+    "    else:\n",
+    "        print(i, author_name, \"0\")\n",
+    "        total_works_first.append(\"0\")\n",
+    "# df = pd.DataFrame({\"author_id\": authors.index, \"author_name\": authors.full_name, \"world_cat_results\": total_works})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>author_name</th>\n",
+       "      <th>world_cat_results</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Reto Hänny</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Jost Perfahl</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Elisabeth Plessen</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Vintila Ivanceanu</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Horst Bienek</td>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>197</td>\n",
+       "      <td>Angelika Stark</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>198</td>\n",
+       "      <td>Heinz Stalder</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>199</td>\n",
+       "      <td>Joachim Scholz</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>200</td>\n",
+       "      <td>Hartmut Riederer</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>201</td>\n",
+       "      <td>Elena Richterich</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>202 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           author_id        author_name world_cat_results\n",
+       "author_id                                                \n",
+       "0                  0         Reto Hänny                29\n",
+       "1                  1       Jost Perfahl                 1\n",
+       "2                  2  Elisabeth Plessen                22\n",
+       "3                  3  Vintila Ivanceanu                 1\n",
+       "4                  4       Horst Bienek               171\n",
+       "...              ...                ...               ...\n",
+       "197              197     Angelika Stark                 3\n",
+       "198              198      Heinz Stalder                12\n",
+       "199              199     Joachim Scholz                33\n",
+       "200              200   Hartmut Riederer                 7\n",
+       "201              201   Elena Richterich                 0\n",
+       "\n",
+       "[202 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "worldcat_1 = pd.DataFrame({\"author_id\": authors.index[:len(total_works_first)], \"author_name\": authors.full_name[:len(total_works_first)], \"world_cat_results\": total_works_first})\n",
+    "worldcat_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "worldcat_2 = pd.DataFrame({\"author_id\": authors.index[202:], \"author_name\": authors.full_name[202:], \"world_cat_results\": total_works})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([worldcat_1,worldcat_2]).set_index('author_id').to_csv(\"worldcat_final.csv\")"
    ]
   },
   {
