Implement prediction notebook

--- a/extract_goodreads_infos.ipynb
+++ b/extract_goodreads_infos.ipynb
@@ -299,7 +299,11 @@
    ],
    "source": [
     "# most affective name concatenation\n",
-    "authors[\"full_name\"] = authors[\"first_name\"].str.cat(authors[[\"middle_name\", \"last_name\"]].fillna(\"\").astype(str), sep=\" \").str.replace(\"  \", \" \")\n",
+    "authors[\"full_name\"] = (\n",
+    "    authors[\"first_name\"]\n",
+    "    .str.cat(authors[[\"middle_name\", \"last_name\"]].fillna(\"\").astype(str), sep=\" \")\n",
+    "    .str.replace(\"  \", \" \")\n",
+    ")\n",
     "authors.head()"
    ]
   },
